# mysqlftppc-suffix

./: INSTALL  Makefile.am  configure.in  ftnorm.c  ftnorm.h  ftstring.c  plugin_suffix.c
test/: test.sh  test.sql
